--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
       <head>
-            <title>UCP</title>
+            <title>UCP...</title>
       </head>
       <body>
             <h1>Hello....</h1>
